# semantic-search-experiments

./: Dockerfile  README.md  docker-compose.yaml  hf-transformers.ipynb  news_embs.ipynb  prepare-semantic-search.ipynb  prepare_labor_law_index.ipynb  pyproject.toml  regex_exp.ipynb  ruclip.ipynb
embed_docker/: Dockerfile  pyproject.toml
embed_docker/app/: main.py
fastapi_docker/: Dockerfile  pyproject.toml
fastapi_docker/app/: main.py  preparation.py
searchgui/: components.py  home_page.py  main.py  menu.py  theme.py  work_pages.py
streamlit_docker/: Dockerfile  Semantic_search.py  pyproject.toml  settings.json
streamlit_docker/pages/: 01_🖼️_Default Image semantic search.py  Add embeddings.py  Add record.py  Image semantic search.py  Reindex.py  Search by emb.py  Search by field.py  Search by id.py  Settings.py
