[tool.poetry]
name = "semantic-search"
version = "0.1.0"
description = "Semantic search based on embeddings"
authors = ["thingumajig <artifex.i@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.4.2"
elasticsearch = "7.17.3"
openpyxl = "^3.0.10"
tensorflow-text = "2.4.3"
pandas = "1.2.5"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
