[tool.poetry]
name = "streamlit-service"
version = "0.1.0"
description = "Semantic search based on embeddings"
authors = ["thingumajig <artifex.i@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.4.2"
pandas = "1.2.5"
tqdm = "^4.64.0"
python-multipart = "0.0.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
